# python-design-smell-fun

./: README.md  pyproject.toml
src/design_smell_fun/using_slots/: __init__.py
src/design_smell_fun/using_slots/impl/: family_tree.py
src/design_smell_fun/using_slots/interface/: family_tree.py
tests/: test_family_tree.py
